# bingtao-xingzuo

./: .gitignore  README.md
.github/workflows/: daily-horoscope.yml
业务/: CLAUDE.md
业务/星座运势小程序/: CLAUDE.md
业务/星座运势小程序/云函数/getDailyFortune/: index.js  package.json
业务/星座运势小程序/云函数/getFortuneDetail/: package.json
业务/星座运势小程序/小程序源码/: app.js  app.json  app.wxss  project.config.json
业务/星座运势小程序/小程序源码/cloudfunctions/getDailyFortune/: package.json
业务/星座运势小程序/小程序源码/cloudfunctions/getFortuneDetail/: index.js
业务/星座运势小程序/小程序源码/components/fortune-content/: fortune-content.js  fortune-content.wxml  fortune-content.wxss
业务/星座运势小程序/小程序源码/components/zodiac-card/: zodiac-card.js  zodiac-card.wxml  zodiac-card.wxss
业务/星座运势小程序/小程序源码/pages/about/: about.js  about.wxml  about.wxss
业务/星座运势小程序/小程序源码/pages/fortune/: fortune.js  fortune.wxml  fortune.wxss
业务/星座运势小程序/小程序源码/pages/index/: index.js  index.wxml  index.wxss
业务/星座运势小程序/小程序源码/utils/: api.js  cache.js  constants.js
业务/星座运势小程序/数据管道/: pipeline.sh  publish_to_cloudbase.py  pyproject.toml  transform_horoscope.py  upload_to_cloudbase.py
业务/星座运势小程序/设计/: 架构设计.md
工具/app/xiangyu-horoscope-fetcher/: fetch_daily_horoscope.py
工具/凭证/: tianapi.md
